--- a/main/resources/assets/powerarmor/lang/en_US.lang
+++ b/main/resources/assets/powerarmor/lang/en_US.lang
@@ -1,5 +1,6 @@
 item.ingotCopper.name=Copper Ingot
 item.cardSpeed.name=Speed Upgrade Card
+item.cardJump.name=Jump Upgrade Card
 item.powerChest.name=Power Chestplate
 tile.blockCopper.name=Block of Copper
 tile.armorWorkbench.name=Armor Workbench
