More packet value code, new card stuff
Fixed/created EventHandler systems for the chestplate and leggings,
setup system for cards that have no upgrade amounts, more backend code
for syncing and updating the GUI with changes, created the Step Card.

--- a/main/resources/assets/powerarmor/lang/en_US.lang
+++ b/main/resources/assets/powerarmor/lang/en_US.lang
@@ -2,6 +2,8 @@ item.ingotCopper.name=Copper Ingot
 item.cardSpeed.name=Speed Upgrade Card
 item.cardJump.name=Jump Upgrade Card
 item.powerChest.name=Power Chestplate
+item.powerPants.name=Power Leggings
+item.cardStep.name=Step Upgrade Card
 tile.blockCopper.name=Block of Copper
 tile.armorWorkbench.name=Armor Workbench
 itemGroup.tabPowerarmor=Power Armor
