--- a/main/resources/assets/powerarmor/lang/en_US.lang
+++ b/main/resources/assets/powerarmor/lang/en_US.lang
@@ -1,9 +1,13 @@
 item.ingotCopper.name=Copper Ingot
 item.cardSpeed.name=Speed Upgrade Card
 item.cardJump.name=Jump Upgrade Card
+item.cardStep.name=Step Upgrade Card
+item.cardFire.name=Fire Resistance Upgrade Card
+item.cardFall.name=Fall Resistance Upgrade Card
+item.powerHelmet.name=Power Helmet
 item.powerChest.name=Power Chestplate
 item.powerPants.name=Power Leggings
-item.cardStep.name=Step Upgrade Card
+item.powerBoots.name=Power Boots
 tile.blockCopper.name=Block of Copper
 tile.armorWorkbench.name=Armor Workbench
 itemGroup.tabPowerarmor=Power Armor
