--- a/main/resources/assets/powerarmor/lang/en_US.lang
+++ b/main/resources/assets/powerarmor/lang/en_US.lang
@@ -1,9 +1,11 @@
 item.ingotCopper.name=Copper Ingot
 item.cardSpeed.name=Speed Upgrade Card
 item.cardJump.name=Jump Upgrade Card
-item.cardStep.name=Step Upgrade Card
-item.cardFire.name=Fire Resistance Upgrade Card
-item.cardFall.name=Fall Resistance Upgrade Card
+item.cardStep.name=Step Assist Card
+item.cardFire.name=Fire Resistance Card
+item.cardFall.name=Fall Resistance Card
+item.cardPerfectFall.name=Perfect Fall Resistance Card
+item.cardProtection.name=Protection Card
 item.powerHelmet.name=Power Helmet
 item.powerChest.name=Power Chestplate
 item.powerPants.name=Power Leggings
