More Network work, more NBT work, more cards.
Added the Nightvision Card and the ArmorInvis card. Modified more
network packets to sync data better. Added system for cards that can
work on all armor pieces. Also changed the system to restore NBT data to
cards when added to the GUI. Also added some more tooltips, including
required armor piece for each card.

--- a/main/resources/assets/powerarmor/lang/en_US.lang
+++ b/main/resources/assets/powerarmor/lang/en_US.lang
@@ -6,6 +6,8 @@ item.cardFire.name=Fire Resistance Card
 item.cardFall.name=Fall Resistance Card
 item.cardPerfectFall.name=Perfect Fall Resistance Card
 item.cardProtection.name=Protection Card
+item.cardNightvision.name=Nightvision Card
+item.cardArmorInvis.name=Invisible Armor Card
 item.powerHelmet.name=Power Helmet
 item.powerChest.name=Power Chestplate
 item.powerPants.name=Power Leggings
